--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>jnco.design</title>
+    <title>Juneco Mirande - UI/UX and Graphic Designer</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
       @font-face {
